After purchase product page

--- a/src/app/preview-page/preview-page.component.html
+++ b/src/app/preview-page/preview-page.component.html
@@ -22,7 +22,10 @@
               👁️ View Product Page
             </a>
             <button class="btn btn-default btn-lg" (click)="onBackClick()">
-              Edit Product Page
+              📝 Edit Product Page
+            </button>
+            <button class="btn btn-success btn-lg" (click)="onPublishClick()">
+              🚀 Publish Product Page
             </button>
           </div>
         </div>
