View button working after purchase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-product-brief-form></app-product-brief-form>
+<app-product-brief-form 
+  [email]="customerEmail" 
+  [urlFromParent]="url">
+</app-product-brief-form>
